--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = "^0.24.0"
 python-dotenv = "^1.0.0"
+alembic = "^1.12.1"
+pydantic-settings = "^2.0.3"
 
 
 [build-system]
