--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,9 @@ uvicorn = "^0.24.0"
 python-dotenv = "^1.0.0"
 alembic = "^1.12.1"
 pydantic-settings = "^2.0.3"
+asyncpg = "^0.29.0"
+greenlet = "^3.0.1"
+email-validator = "^2.1.0.post1"
 
 
 [build-system]
