--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,7 @@ pydantic-settings = "^2.0.3"
 asyncpg = "^0.29.0"
 greenlet = "^3.0.1"
 email-validator = "^2.1.0.post1"
+python-jose = "^3.3.0"
 
 
 [build-system]
