--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.29.0"
 greenlet = "^3.0.1"
 email-validator = "^2.1.0.post1"
 python-jose = "^3.3.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
