--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,7 @@ greenlet = "^3.0.1"
 email-validator = "^2.1.0.post1"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
+fastapi-pagination = "^0.12.12"
 
 
 [build-system]
