--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,8 @@ email-validator = "^2.1.0.post1"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
 fastapi-pagination = "^0.12.12"
+fastapi-cache2 = "^0.2.1"
+redis = "^5.0.1"
 
 
 [build-system]
