--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -20,6 +20,7 @@ python-multipart = "^0.0.6"
 fastapi-pagination = "^0.12.12"
 fastapi-cache2 = "^0.2.1"
 redis = "^5.0.1"
+pendulum = "2.0.3"
 
 
 [build-system]
