--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.6.2",
     "babel": "^6.23.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
@@ -20,13 +21,14 @@
     "react-scripts": "5.0.1",
     "tsparticles": "^2.12.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
-    "serve": "react-scripts start NODE_OPTIONS=--trace-deprecation",
+    "serve": "react-scripts start --disable-ipc-flooding-protection --trace-deprecation",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
