--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
