--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -21,6 +21,7 @@ fastapi-pagination = "^0.12.12"
 fastapi-cache2 = "^0.2.1"
 redis = "^5.0.1"
 pendulum = "2.0.3"
+gunicorn = "^21.2.0"
 
 
 [build-system]
