--- a/api/docker-compose.dev.yml
+++ b/api/docker-compose.dev.yml
@@ -7,11 +7,11 @@ services:
     volumes:
       - psql_data:/var/lib/posgresql/data
     environment:
-      POSTGRES_DB: "${DB_NAME}"
-      POSTGRES_USER: "${DB_USER}"
-      POSTGRES_PASSWORD: "${DB_PASSWORD}"
-      POSTGRES_HOST: "${DB_HOST}"
-      POSTGRES_PORT: "${DB_PORT}"
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_PORT: ${DB_PORT}
     env_file: .env.local
 
   api:
