Added create_admin.py command and login as admin user with username and password of created admin account

--- a/api/docker-compose.dev.yml
+++ b/api/docker-compose.dev.yml
@@ -22,6 +22,12 @@ services:
       - media_volume:/apps/api/media
     depends_on:
       - db
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_PORT: ${DB_PORT}
     env_file:
       - .env.local
     ports:
