Added Settings of project. Changed docker-compose.dev file and some changes in run.sh script for starting project

--- a/api/Makefile
+++ b/api/Makefile
@@ -4,10 +4,10 @@ dc_prod = docker compose --env-file .env.prod -f docker-compose.prod.yml
 .SILENT:
 
 run-dev:
-	${dc_dev} up --build
+	${dc_dev} up -d --build
 
 run-prod:
-	${dc_prod} up --build
+	${dc_prod} up -d --build
 
 build-dev:
 	${dc_dev} build
