--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,8 @@ greenlet = "^3.0.3"
 psycopg = {version = "^3.1.18", extras = ["binary", "pool"]}
 python-dotenv = "^1.0.1"
 alembic = "^1.13.1"
+pydantic-settings = "^2.2.1"
+uvicorn = "^0.27.1"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.109.2"
