--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -16,6 +16,7 @@ pydantic-settings = "^2.2.1"
 uvicorn = "^0.27.1"
 passlib = "^1.7.4"
 bcrypt = "^4.1.2"
+email-validator = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.109.2"
