Added some endpoints for project order and some system start changing

--- a/api/docker-compose.dev.yml
+++ b/api/docker-compose.dev.yml
@@ -34,7 +34,7 @@ services:
       - "8000:${API_APP_PORT}"
     volumes:
       - .:/app/api
-      - static_data:/app/api/${STATIC_DIR}
+      - ./${STATIC_DIR}:/app/api/${STATIC_DIR}
 
 volumes:
   postgres_data:
