--- a/web/package.json
+++ b/web/package.json
@@ -12,30 +12,28 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@uiw/react-md-editor": "^4.0.4",
         "axios": "^1.6.2",
         "babel": "^6.23.0",
         "dotenv": "^16.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
-        "react-markdown": "^9.0.1",
         "react-particles": "^2.12.2",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
-        "react-syntax-highlighter": "^15.5.0",
         "sass": "^1.70.0",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0",
         "webpack": "^5.89.0"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@types/react-syntax-highlighter": "^15.5.11"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     },
     "scripts": {
-        "start": "react-scripts start --disable-ipc-flooding-protection --trace-deprecation",
-        "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
