--- a/api/docker-compose.dev.yml
+++ b/api/docker-compose.dev.yml
@@ -23,6 +23,7 @@ services:
     depends_on:
       - postgresql
     environment:
+      MODE: "DEV"
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
