--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,7 @@ passlib = "^1.7.4"
 bcrypt = "^4.1.2"
 email-validator = "^2.1.1"
 sqladmin = "^0.16.1"
+gunicorn = "^22.0.0"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.109.2"
