Changed nginx port

--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -42,6 +42,9 @@ services:
     image: nginx:latest
     build:
       context: ./nginx
+    ports:
+    - "8080:80"
+    - "8443:443"
     volumes:
       - ./nginx:/etc/nginx/conf.d
     env_file:
