--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -38,17 +38,17 @@ services:
       - .:/app/api
       - ./${STATIC_DIR}:/app/api/${STATIC_DIR}
 
-  # nginx:
-  #   image: nginx:latest
-  #   build:
-  #     context: ./nginx
-  #   ports:
-  #   - "8080:80"
-  #   - "8443:443"
-  #   volumes:
-  #     - ./nginx:/etc/nginx/conf.d
-  #   env_file:
-  #     - .env.prod
+  nginx:
+    image: nginx:latest
+    build:
+      context: ./nginx
+    ports:
+    - "8080:80"
+    - "8443:443"
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+    env_file:
+      - .env.prod
 
 volumes:
   postgres_data:
