--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
     env_file:
       - .env.prod
     expose:
-      - 8000
+      - ${API_APP_PORT}
     volumes:
       - .:/app/api
       - ./${STATIC_DIR}:/app/api/${STATIC_DIR}
@@ -43,12 +43,15 @@ services:
     build:
       context: ./nginx
     ports:
-    - "8080:80"
-    - "8443:443"
+      - "${NGINX_PORT}:80"
+      - "${NGINX_SSL_PORT}:443"
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      # - ./nginx:/etc/nginx/conf.d
+        - ./nginx/templates:/etc/nginx/templates
     env_file:
       - .env.prod
+    depends_on:
+      - app
 
 volumes:
   postgres_data:
