--- a/api/supervisor/supervisord.conf
+++ b/api/supervisor/supervisord.conf
@@ -6,4 +6,4 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-command=gunicorn src.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000 --reload
+command=gunicorn src.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:%(ENV_API_APP_PORT)s --forwarded-allow-ips "%(ENV_SUPERVISOR_FORWARDED_ALLOWED_IP)s"
