--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,6 +19,7 @@ bcrypt = "^4.1.2"
 email-validator = "^2.1.1"
 sqladmin = "^0.16.1"
 gunicorn = "^22.0.0"
+pydantic = "^2.7.1"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.109.2"
